Got the error message down, along with the text of what was written. Could not get the box to display with it

--- a/style.css
+++ b/style.css
@@ -26,3 +26,9 @@ input, textarea{
 .tooltip:hover .tooltiptext {
   visibility: visible;
 }
+
+#feedback-display{
+    margin-top: 20px;
+    padding: 10px;
+    border: 1px black;
+}
