--- a/style.css
+++ b/style.css
@@ -1,34 +1,110 @@
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 30px;
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
 }
 
-input, textarea{
-    width: 250px;
+h1 {
+    color: #333;
+    text-align: center;
+    margin-top: 20px;
 }
 
-.tooltip{
-    position: absolute;
-    border-bottom: 1px dotted black;
+p {
+    color: #666;
+    line-height: 1.6;
+    margin: 20px;
+}
+a {
+    color: #0066cc;
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
+}
+.container {
+    width: 80%;
+    margin: auto;
+    overflow: hidden;
+}
+header {
+    background: #50b3a2;
+    color: #fff;
+    padding-top: 30px;
+    min-height: 70px;
+    border-bottom: #e8491d 3px solid;
+}
+header a {
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 16px;
+}
+header ul {
+    padding: 0;
+    list-style: none;
+}
+header li {
+    float: left;
+    display: inline;
+    padding: 0 20px 0 20px;
+}
+header #branding {
+    float: left;
+}
+header #branding h1 {
+    margin: 0;
+}
+header nav {
+    float: right;
+    margin-top: 10px;
+}
+footer {
+    background: #333;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    margin-top: 20px;
+}
+footer p {
+    margin: 0;
+}
+.button {
     display: inline-block;
+    color: #fff;
+    background: #e8491d;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+}
+.button:hover {
+    background: #333;
+}
+input[type="text"], input[type="email"], textarea {
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+input[type="submit"] {
+    background: #50b3a2;
+    color: #fff;
+    border: 0;
+    padding: 10px 20px;
+    border-radius: 5px;
     cursor: pointer;
 }
-
-.tooltiptext{
-    visibility: hidden;
-    background-color: black;
-    color: white;
-    padding: 5px 0;
-    text-align: center;
-    border-radius: 6px;
+input[type="submit"]:hover {
+    background: #e8491d;
 }
-
-.tooltip:hover .tooltiptext {
-  visibility: visible;
+nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
-
-#feedback-display{
-    margin-top: 20px;
-    padding: 10px;
-    border: 1px black;
+nav ul li {
+    display: inline;
+    margin-right: 10px;
 }
